# TunmProto

./: .gitignore  README.md
cpp/: tunm_cpp.sln
cpp/include/: Buffer.h  Config.h  Decodes.h  Encodes.h  Proto.h  Values.h
cpp/src/: test.cpp  tunm_cpp.vcxproj  tunm_cpp.vcxproj.filters
dotnet/: Program.cs
dotnet/src/: Buffer.cs  Decode.cs  Encode.cs  Test.cs  Values.cs
godot/: Node2D.tscn  client.gd  netmsg.gd  project.godot
godot/proto/: buffer.gd  cmdln.gd  core.gd
javascript/: README.md
javascript/example/: net_msg.js  websocket.html
javascript/src/: buffer.js  decode.js  encode.js  lib.js  rt_proto.js  tunm_proto.js  values.js
javascript/test/: test.html  test.js
python/: README.md  setup.py
python/src/: bytebuffer.py  test_proto.py  tunm.py
python/tunm_proto/: __init__.py  bytebuffer.py  test_proto.py  tunm.py
rust/: Cargo.toml  README.md
rust/examples/: rp.rs  test_data.rs
rust/src/: buffer.rs  config.rs  decode.rs  encode.rs  lib.rs  macros.rs  values.rs
rust/tests/: test.rs
