[package]
name = "rt_proto"
version = "0.1.3"
edition = "2021"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "rt proto for Rust"
repository = "https://github.com/tickbh/rt_proto"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["protocol", "GoogleProtocolBuffer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3.16"
