[package]
name = "tunm_proto"
version = "0.1.8"
edition = "2021"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "tunm proto for Rust"
repository = "https://github.com/tickbh/TunmProto"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["protocol", "GoogleProtocolBuffer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
