[package]
name = "tunm_proto"
version = "0.1.16"
edition = "2021"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "tunm proto for Rust"
repository = "https://github.com/tickbh/TunmProto"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["protocol", "GoogleProtocolBuffer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.17"

[dev-dependencies]
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"